--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <h2>N220 Projects<br>Spring 2020</h2>
     <p><a href="homeworkOne/personalComposition.html">Homework 1: Personal Composition</a><br>
     *Click on the page to make the thing happen. You should see a circle grow in the center, gradually changing its fill color from black to gray*</p>
+    <p><a href="homeworkThree/loopsExercises.html"> Homework 3: Loops Exercises</a><br>
+    *Inside are three links to the three prompt solutions I chose; 1, 2, and 3.<br> 
+    At this time, I've hit a wall on number 2. Number 1 and 3 are complete and working though.</p>
     
 
     
