Homework Five Update
Week 5 Homework (Functions!)

--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
     *Click on the page to make the thing happen. You should see a circle grow in the center, gradually changing its fill color from black to gray*</p>
     <p><a href="homeworkThree/loopsExercises.html"> Homework 3: Loops Exercises</a><br>
     *Inside are three links to the three prompt solutions I chose; 1, 2, and 3.<br> 
-    At this time, I've hit a wall on number 2. Number 1 and 3 are complete and working though.</p>
+    At this time, I've hit a wall on number 2. Number 1 and 3 are complete and working though.<br></p>
+	<h3>Homework 5: Functions Exercises</h3>
+	<p><br><a href="homeworkFive/homeworkFivePromptA.html"> Prompt A: Stop Light </a><br>
+	<a href="homeworkFive/homeworkFivePromptB.html"> Prompt B: Mouse Chaser </a><br>
+	<a href="homeworkFive/homeworkFivePromptC.html"> Prompt C: Personal Composition</a></p>
+	
+
     
 
     
