homework six update
objects exercises

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 	<p><br><a href="homeworkFive/homeworkFivePromptA.html"> Prompt A: Stop Light </a><br>
 	<a href="homeworkFive/homeworkFivePromptB.html"> Prompt B: Mouse Chaser </a><br>
 	<a href="homeworkFive/homeworkFivePromptC.html"> Prompt C: Personal Composition</a></p>
+    <h3>Homework 6: Objects Exercises</h3>
+    <p><br><a href="homeworkSix/homeworkSixPromptOne"
 	
 
     
