--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 	<a href="homeworkFive/homeworkFivePromptB.html"> Prompt B: Mouse Chaser </a><br>
 	<a href="homeworkFive/homeworkFivePromptC.html"> Prompt C: Personal Composition</a></p>
     <h3>Homework 6: Objects Exercises</h3>
-    <p><br><a href="homeworkSix/homeworkSixPromptOne"
+    <p><br><a href="homeworkSix/homeworkSixPromptOne">Prompt 1: Data Driven Display</a>
+    <a href="homeworkSix/homeworkSixPromptTwo.html">Prompt 2: Animated Object</a>
+    <a href="homeworkSix/homeworkSixPromptPComp.html">Personal Composition: Random Roundel Race</a>
 	
 
     
