Makeup Assignments Update
Contents: Homework 2 (conditional operators) and homework 4 (arrays)

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <p><a href="homeworkThree/loopsExercises.html"> Homework 3: Loops Exercises</a><br>
     *Inside are three links to the three prompt solutions I chose; 1, 2, and 3.<br> 
     At this time, I've hit a wall on number 2. Number 1 and 3 are complete and working though.<br></p>
+    <p><a href="homeworkFour/arraysMain.html">Homework 4: Loops Exercises</a></p>
 	<h3>Homework 5: Functions Exercises</h3>
 	<p><br><a href="homeworkFive/homeworkFivePromptA.html"> Prompt A: Stop Light </a><br>
 	<a href="homeworkFive/homeworkFivePromptB.html"> Prompt B: Mouse Chaser </a><br>
@@ -21,6 +22,7 @@
     <p><br><a href="homeworkSix/homeworkSixPromptOne">Prompt 1: Data Driven Display</a>
     <a href="homeworkSix/homeworkSixPromptTwo.html">Prompt 2: Animated Object</a>
     <a href="homeworkSix/homeworkSixPromptPComp.html">Personal Composition: Random Roundel Race</a>
+
 	
 
     
