--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
     <h3>Homework 6: Objects Exercises</h3>
     <p><br><a href="homeworkSix/homeworkSixPromptOne">Prompt 1: Data Driven Display</a>
     <br><a href="homeworkSix/homeworkSixPromptTwo.html">Prompt 2: Animated Object</a>
-    <br><a href="homeworkSix/homeworkSixPromptPComp.html">Personal Composition: Random Roundel Race</a>
+    <br><a href="homeworkSix/homeworkSixPromptPComp.html">Personal Composition: Random Roundel Race</a></p><br>
+
+    <h3>Homework 7: Inputs Exercises</h3>
+    <br><p><a href="homeworkSeven/inputPromptOne.html">Prompt 1: Greeter</a>
+    <br><a href="homeworkSeven/inputPromptTwo.html">Prompt 2: Tip Calculator</a>
+    <br><a href="homeworkSeven/inputPromptThree.html">Prompt 3: User Authentication</a></p>
 
 	
 
