--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
     <br><a href="homeworkSix/homeworkSixPromptPComp.html">Personal Composition: Random Roundel Race</a></p><br>
 
     <h3>Homework 7: Inputs Exercises</h3>
-    <br><p><a href="homeworkSeven/inputPromptOne.html">Prompt 1: Greeter</a>
+    <p><a href="homeworkSeven/inputPromptOne.html">Prompt 1: Greeter</a>
     <br><a href="homeworkSeven/inputPromptTwo.html">Prompt 2: Tip Calculator</a>
-    <br><a href="homeworkSeven/inputPromptThree.html">Prompt 3: User Authentication</a></p>
+    <br><a href="homeworkSeven/inputPromptThree.html">Prompt 3: User Authentication</a>
+    <br> Note: Correct username and password are "admin" and "password", because I'm basic like that.</p>
 
 	
 
