Homework 8 DOM Exercises

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
     <br><a href="homeworkSeven/inputPromptTwo.html">Prompt 2: Tip Calculator</a>
     <br><a href="homeworkSeven/inputPromptThree.html">Prompt 3: User Authentication</a>
     <br> Note: Correct username and password are "admin" and "password", because I'm basic like that.</p>
+    <h3>Homework 8: DOM Exercises</h3>
+    <p><a href="homeworkEight/domPrompt1.html">Prompt 1: Growing Green Square</a>
+    <br><a href="homeworkEight/domPrompt2.html">Prompt 2: Lots o' Boxes</a>
+    <br><a href="homeworkEight/domPrompt3.html">Prompt 3: Mouse On, Mouse Off</a>
 
 	
 
