--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
     <br><a href="homeworkEight/domPrompt2.html">Prompt 2: Lots o' Boxes</a>
     <br><a href="homeworkEight/domPrompt3.html">Prompt 3: Mouse On, Mouse Off</a>
 
+    <h3>Homework 9: Array Computation Exercises</h3>
+    <p><a href="homeworkNine/exercise1.html">Prompt 1: Just Average</a>
+    <br><a href="homeworkNine/exercise2.html">Prompt 2: Tire Censor</a>
+    <br><a href="homeworkNine/exercise3.html">Prompt 3: Triple Divs (Incomplete)</a>
+
 	
 
     
