--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
     <br><a href="homeworkNine/exercise2.html">Prompt 2: Tire Censor</a>
     <br><a href="homeworkNine/exercise3.html">Prompt 3: Triple Divs (Incomplete)</a>
 
+    <h3>Homework 10: Events Exercises</h3>
+    <p><a href="homeworkTen/promptOne.html">Prompt 1: Grey to RGB</a>
+    <br><a href="homeworkTen/promptTwo.html">Prompt 2: Color Changer with Buttons</a>
+    <br><a href="homeworkTen/promptThree.html">Prompt 3: Flashcards</a>
+
 	
 
     
