Final Project (incomplete)

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
     <br><a href="homeworkTen/promptTwo.html">Prompt 2: Color Changer with Buttons</a>
     <br><a href="homeworkTen/promptThree.html">Prompt 3: Flashcards</a>
 
+    <h3>Final Project: Hangman</h3>
+    <p><a href="finalProject/index.html">Hangman</a></p>
+
 	
 
     
